syntax = "proto3";
package llama2;

enum DType
{
    UINT32 = 0;
    FLOAT32 = 1;
    INT32 = 2;
    FLOAT16 = 3;
}

message Variable 
{
    string name = 1;
    repeated int32 shape=2;
    DType dtype = 3;
    bytes data = 4;
};

message Variables
{
    repeated Variable variables = 1;
};
